--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,15 +2,18 @@
 
   <div class=row>
     <div class="col-md-6" id="graph_1_column">
-      <div class="graph_1_container"></div>
+      <h2>Timeline</h2>
+      <div class="graph_1_container" id="graph_1_container"></div>
     </div><!--/.col-md-6-->
     <div class="col-md-6" id="graph_2_column">
-      <div class="graph_2_container"></div>
+      <h2>Failures</h2>
+      <div class="graph_2_container"  id="graph_2_container"></div>
     </div><!--/.col-md-6-->
   </div>
 
   <div class=row>
     <div class="col-md-12" id="events_table">
+      <h2>Events</h2>
       <div class="events_div"></div>
     </div><!--/.col-md-12-->
   </div>
@@ -18,3 +21,162 @@
 
   Hello World
 </div>
+
+<script>
+var chart;
+$(document).ready(function () {
+    chart = new Highcharts.Chart({
+        chart: {
+            renderTo: 'graph_2_container'
+        },
+        credits: {
+            enabled: false
+        },
+        legend: {
+            layout: 'horizontal',
+            verticalAlign: 'bottom'
+        },
+        title: {
+            text: ''
+        },
+        tooltip: {
+            formatter: function () {
+                if (this.series.name == 'Accumulated') {
+                    return this.y + '%';
+                }
+                return this.x + '<br/>' + '<b> ' + this.y.toString().replace('.', ',') + ' </b>';
+            }
+        },
+        xAxis: {
+            categories: ['E', 'D', 'B', 'A']
+        },
+        yAxis: [{
+            title: {
+                text: ''
+            }
+        }, {
+            labels: {
+                formatter: function () {
+                    return this.value + '%';
+                }
+            },
+            max: 100,
+            min: 0,
+            opposite: true,
+            plotLines: [{
+                color: '#89A54E',
+                dashStyle: 'shortdash',
+                value: 80,
+                width: 3,
+                zIndex: 10
+            }],
+            title: {
+                text: ''
+            }
+        }],
+        series: [{
+            data: [5.6000000000, 5.1000000000, 2.8000000000, 1.3000000000],
+            name: 'Options',
+            type: 'column'
+        }, {
+            data: [38, 72, 91, 100],
+            name: 'Accumulated',
+            type: 'spline',
+            yAxis: 1,
+            id: 'accumulated'
+        }]
+    },function(chart){
+
+
+        var x = 0.8 * chart.plotWidth;
+
+        chart.renderer.path([
+                 'M',
+                 x, chart.plotTop,
+                 'L',
+                 x, chart.plotTop + chart.plotHeight
+            ]).attr({
+                'stroke-width': 2,
+                stroke: 'red',
+                id: 'vert',
+               'stroke-dasharray':"5,5",
+                zIndex: 2000
+            }).add();
+
+    });
+});
+
+$(function () {
+    $('#graph_1_container').highcharts({
+        chart: {
+            type: 'column'
+        },
+        title: {
+            text: 'Monthly Average Rainfall',
+            style : {
+              display : 'none'
+            }
+        },
+        subtitle: {
+            text: 'Source: WorldClimate.com',
+            style : {
+              display : 'none'
+            }
+        },
+        xAxis: {
+            categories: [
+                'Jan',
+                'Feb',
+                'Mar',
+                'Apr',
+                'May',
+                'Jun',
+                'Jul',
+                'Aug',
+                'Sep',
+                'Oct',
+                'Nov',
+                'Dec'
+            ],
+            crosshair: true
+        },
+        yAxis: {
+            min: 0,
+            title: {
+                text: 'Rainfall (mm)'
+            }
+        },
+        tooltip: {
+            headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+            pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+                '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
+            footerFormat: '</table>',
+            shared: true,
+            useHTML: true
+        },
+        plotOptions: {
+            column: {
+                pointPadding: 0.2,
+                borderWidth: 0
+            }
+        },
+        series: [{
+            name: 'Tokyo',
+            data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
+
+        }, {
+            name: 'New York',
+            data: [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3]
+
+        }, {
+            name: 'London',
+            data: [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2]
+
+        }, {
+            name: 'Berlin',
+            data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
+
+        }]
+    });
+});
+</script>
