--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 	<%= render :partial => "layouts/header" %>
 </header>
 
-<%= yield %>
+<div class="container main-container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
