--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,3 @@
-<div class="container">
-
   <div class=row>
     <div class="col-md-6" id="graph_1_column">
       <h2>Timeline</h2>
@@ -14,15 +12,49 @@
   <div class=row>
     <div class="col-md-12" id="events_table">
       <h2>Events</h2>
-      <div class="events_div"></div>
+      <div class="events_div">
+        <%= render :partial => "events/events_table" %>
+      </div>
+    </div><!--/.col-md-12-->
+    <div class="col-md-12" id="events_table">
+      <div class="bottom-nav-link-right"><%= link_to "Create an Event", new_event_path, :class => "btn btn-mini btn-success" %></div>
     </div><!--/.col-md-12-->
   </div>
 
+  <div class=row>
 
-  Hello World
-</div>
+    <div class="linac_stats">
+      <h2>Cumulative Statistics</h2>
+      <%= render :partial => 'linacs/stats' %>
+    </div>
+  </div><!-- /.row -->
+
+<div class=row>
+  <%= render :partial => "layouts/bottom_nav" %>
+</div><!-- /.row -->
+
+
 
 <script>
+
+var color_array = ['#92CA8A', '#4FA8C7', '#393939', '#5D5D5D', '#A2A2A2', '#F7F7F7']
+
+var linac_array = <%= @linac_array.to_json.html_safe %>;
+
+function colorAssigner(linac_name) {
+          var index_number = linac_array.indexOf(linac_name);
+          new_index_number = adjustIndex(index_number);
+          return color_array[new_index_number];
+};
+
+function adjustIndex(index_value, array_length) {
+  while (index_value > array_length) {
+    index_value = index_value - array_length;
+  }
+  return index_value
+};
+
+
 var chart;
 $(document).ready(function () {
     chart = new Highcharts.Chart({
@@ -34,7 +66,8 @@ $(document).ready(function () {
         },
         legend: {
             layout: 'horizontal',
-            verticalAlign: 'bottom'
+            verticalAlign: 'bottom',
+            enabled: false
         },
         title: {
             text: ''
@@ -42,17 +75,20 @@ $(document).ready(function () {
         tooltip: {
             formatter: function () {
                 if (this.series.name == 'Accumulated') {
-                    return this.y + '%';
+                    return this.y.toFixed(2) + '%';
                 }
-                return this.x + '<br/>' + '<b> ' + this.y.toString().replace('.', ',') + ' </b>';
+                return this.point.name + '<br/>' + '<b> ' + this.y.toString().replace('.', ',') + ' min </b>';
             }
         },
         xAxis: {
-            categories: ['E', 'D', 'B', 'A']
+          type: 'category',
+            labels: {
+                rotation: -45,
+              },
         },
         yAxis: [{
             title: {
-                text: ''
+                text: 'Downtime (min)'
             }
         }, {
             labels: {
@@ -63,87 +99,69 @@ $(document).ready(function () {
             max: 100,
             min: 0,
             opposite: true,
-            plotLines: [{
-                color: '#89A54E',
-                dashStyle: 'shortdash',
-                value: 80,
-                width: 3,
-                zIndex: 10
-            }],
+            plotLines: [],
             title: {
-                text: ''
+                text: '% of Total Downtime'
             }
         }],
         series: [{
-            data: [5.6000000000, 5.1000000000, 2.8000000000, 1.3000000000],
+            data: [
+              <% @pareto_data[0].each do |p| %>
+                {
+                  y: <%= p[2] %>,
+                  name: '<%= p[0] %>',
+                  color: colorAssigner('<%= p[0] %>')
+                },
+              <% end %>
+            ],
             name: 'Options',
             type: 'column'
         }, {
-            data: [38, 72, 91, 100],
+            data: [
+              <% @pareto_data[1].each do |p| %>
+              {
+                y: <%= p[1] %>,
+              },
+              <% end %>
+            ],
             name: 'Accumulated',
             type: 'spline',
             yAxis: 1,
             id: 'accumulated'
         }]
-    },function(chart){
-
-
-        var x = 0.8 * chart.plotWidth;
-
-        chart.renderer.path([
-                 'M',
-                 x, chart.plotTop,
-                 'L',
-                 x, chart.plotTop + chart.plotHeight
-            ]).attr({
-                'stroke-width': 2,
-                stroke: 'red',
-                id: 'vert',
-               'stroke-dasharray':"5,5",
-                zIndex: 2000
-            }).add();
-
     });
 });
+
 
 $(function () {
     $('#graph_1_container').highcharts({
         chart: {
             type: 'column'
         },
+        credits: {
+            enabled: false
+        },
         title: {
-            text: 'Monthly Average Rainfall',
+            text: '',
             style : {
               display : 'none'
             }
         },
         subtitle: {
-            text: 'Source: WorldClimate.com',
+            text: '',
             style : {
               display : 'none'
             }
         },
         xAxis: {
-            categories: [
-                'Jan',
-                'Feb',
-                'Mar',
-                'Apr',
-                'May',
-                'Jun',
-                'Jul',
-                'Aug',
-                'Sep',
-                'Oct',
-                'Nov',
-                'Dec'
-            ],
-            crosshair: true
+          type: 'datetime',
+          minPadding: 0.10,
+          maxPadding: 0.05,
         },
         yAxis: {
             min: 0,
             title: {
-                text: 'Rainfall (mm)'
+                text: 'Downtime Duration (min)'
             }
         },
         tooltip: {
@@ -160,23 +178,15 @@ $(function () {
                 borderWidth: 0
             }
         },
-        series: [{
-            name: 'Tokyo',
-            data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
-
-        }, {
-            name: 'New York',
-            data: [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3]
-
-        }, {
-            name: 'London',
-            data: [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2]
-
-        }, {
-            name: 'Berlin',
-            data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
-
-        }]
+        series: [
+        <% @events_data_array.each do |e| %>
+        {
+            name: '<%= e[0] %>',
+            color: colorAssigner('<%= e[0] %>'),
+            data:  <%= e[1] %>,
+        },
+        <% end %>
+      ]
     });
 });
 </script>
