--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,10 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_group_id %><br>
-    <%= f.number_field :user_group_id %>
-  </div>
+  <% if current_user && current_user.admin? %>
+    <div class="field">
+      <%= f.label :user_group %><br />
+      <%= f.collection_select :user_group_id, UserGroup.all.order(:name),:id,:name, include_blank: false %>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :first_name %><br>
     <%= f.text_field :first_name %>
@@ -22,6 +25,10 @@
   <div class="field">
     <%= f.label :last_name %><br>
     <%= f.text_field :last_name %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.email_field :email %>
   </div>
   <div class="actions">
     <%= f.submit %>
