--- a/app/views/events/_delay_modal.html.erb
+++ b/app/views/events/_delay_modal.html.erb
@@ -3,9 +3,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
+        <h4 class="modal-title">Record a Downtime Event</h4>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" id="delay_modal_body">
         <%= form_for(@new_event, :url => url_for(:controller => 'events', :action => 'start_event_countdown'), :remote => true, :authenticity_token => true) do |f| %>
           <% if @new_event.errors.any? %>
             <div id="error_explanation">
@@ -31,15 +31,12 @@
             <%= f.text_area :description %>
           </div>
           <div class="actions">
-            <%= f.submit %>
+            <%= f.submit :class => "btn btn-success" %>
           </div>
         <% end %>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" id="delay_modal_footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-        <button type="button" class="btn btn-default" id="test_button">Test</button>
-
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
