--- a/app/views/pages/_area_graph.html.erb
+++ b/app/views/pages/_area_graph.html.erb
@@ -28,7 +28,8 @@ $(document).ready(function () {
     chart = new Highcharts.Chart({
         chart: {
             renderTo: 'graph_2_container',
-            type: 'area'
+            type: 'area',
+            zoomType: 'x'
         },
         credits: {
             enabled: false
